<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Autism Activities</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="existing_user">No. Im an existing user</string>
    <string name="login">LOGIN</string>
    <string name="new_user">Are you new to this app?</string>
    <string name="signup">SIGNUP</string>
    <string name="or">OR</string>
    <string name="yes">YES</string>
    <string name="welcome_back">Welcome Back!</string>

    <string name="title_activity_main_grid">MainGridActivity</string>
    <string name="title_activity_item">ItemActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="save">save</string>
    <string name="delete">delete</string>
    <string name="delete_confirm">Are you sure you want to delete?</string>
    <string name="cancel">cancel</string>
    <string name="next">next</string>
    <string name="back">back</string>
    <string name="play">play</string>
    <string name="main_image">main image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="title_activity_audio_record">Record Audio</string>
    <string name="record_limit">Recording is limited to 10 seconds</string>
    <string name="title_activity_item_edit">Press image to change</string>
    <string name="change_audio">Change Audio</string>
    <string name="title">Title</string>
    <string name="use_new_recording">Use new recording</string>
    <string name="play_audio">Play Audio</string>
    <string name="stop_audio">Stop Audio</string>
    <string name="defaults">Defaults</string>
    <string name="title_activity_flows_public_list">Cloud</string>
    <string name="title_activity_flows_user_list">FlowsUserListActivity</string>
    <string name="list_empty">No items to display</string>
    <string name="title_activity_flow_public_items">FlowPublicItemsActivity</string>
    <string name="reset_default_audio">Want computer voice?\nReset default</string>
    <string name="no_user_found">No user found</string>
    <string name="no_user_found_message">You need to have an account to download this. Would you like to create one now?</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_internet_connection_message">You must be connected to the internet to download this</string>
    <string name="download_activity_flow">Are you sure?</string>
    <string name="download_activity_flow_message">Are you sure you would like to download this activity flow?</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="saving">Saving</string>
    <string name="download_complete_return_to_profile">Download Complete\nTap here to return to your profile</string>
    <string name="feelings">Feelings</string>
    <string name="title_activity_feelings_list">Feelings</string>

    <string name="updates_available">Updates are available. Tap to view</string>
    <string name="title_activity_flow_user_items_update">Update</string>

    <string name="view_cloud">VIEW CLOUD</string>
    <string name="title_activity_welcome_screen">WelcomeScreenActivity</string>
    <string name="password_hint">Password</string>
    <string name="reenter_password_hint">Re-enter password</string>
    <string name="title_activity_signup">Signup</string>

    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="welcome_new_users_main">Welcome!\nYou can view the stories available in the public cloud. If you want to download one, you can create an account, then download it.\nTap OK to proceed.</string>
    <string name="download_successful">Download Successful!\nTap OK to go to your profile.</string>



</resources>
