<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.adarshhasija.flows.SignupActivity">


    <EditText
        android:id="@+id/edit_text_first_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/first_name_hint" />
    <EditText
        android:id="@+id/edit_text_last_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/last_name_hint" />
    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress" />
    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/edit_text_password_confirm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reenter_password_hint"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/signup_button"
        android:contentDescription="@string/signup"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textSize="18sp"
        android:textColor="#FFFFFFFF"
        android:background="#FF0000FF"
        android:layout_marginTop="10dp"
        android:text="@string/signup" />

</LinearLayout>
