<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.adarshhasija.flows.WelcomeScreenActivity">

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/text_view_existing_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_logo"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black_overlay"
        android:textSize="20dp"
        android:contentDescription="@string/existing_user"
        android:text="@string/existing_user"/>

    <Button
        android:id="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textSize="18sp"
        android:textColor="#FFFFFFFF"
        android:background="#FF0000FF"
        android:layout_below="@id/text_view_existing_user"
        android:layout_marginTop="10dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/text_view_new_user"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_marginTop="10dp"
        android:textColor="@color/black_overlay"
        android:textSize="20dp"
        android:contentDescription="@string/new_user"
        android:text="@string/new_user"/>


    <Button
        android:id="@+id/signup_button"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/signup"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textSize="18sp"
        android:textColor="#FFFFFFFF"
        android:background="#FF0000FF"
        android:layout_below="@id/text_view_new_user"
        android:layout_marginTop="10dp"
        android:text="@string/signup" />

    <TextView
        android:id="@+id/text_view_or"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_button"
        android:layout_marginTop="10dp"
        android:textColor="@color/black_overlay"
        android:textSize="20dp"
        android:contentDescription="@string/or"
        android:text="@string/or"/>

    <Button
        android:id="@+id/view_cloud_button"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/view_cloud"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textSize="18sp"
        android:textColor="#FFFFFFFF"
        android:background="#FF0000FF"
        android:layout_below="@id/text_view_or"
        android:layout_marginTop="10dp"
        android:text="@string/view_cloud" />


</RelativeLayout>
