<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.adarshhasija.flows.LoginActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_back"
        android:layout_gravity="center"
        android:textSize="30dp"
        android:id="@+id/textViewWelcomeBack" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress" />
    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/login_button"
        android:contentDescription="@string/login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textSize="18sp"
        android:textColor="#FFFFFFFF"
        android:background="#FF0000FF"
        android:layout_marginTop="10dp"
        android:text="@string/login" />


</LinearLayout>
