<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.adarshhasija.flows.ItemActivity">

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewEdit"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="Edit button"
        android:src="@drawable/ic_action_edit_holo_light" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:id="@+id/imageViewMain"
        android:layout_centerVertical="true"
        android:layout_below="@id/textView"
        android:layout_marginTop="20dp"
        android:src="@drawable/microsoftword"
        android:contentDescription="@string/main_image" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewPlay"
        android:src="@drawable/play_button_large"
        android:contentDescription="@string/play"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewLeftArrow"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/left_arrow"
        android:contentDescription="@string/back"
        android:layout_toStartOf="@+id/imageViewPlay"
        android:layout_alignTop="@+id/imageViewPlay"
        android:visibility="visible" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewRightArrow"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/right_arrow"
        android:contentDescription="@string/next"
        android:layout_alignTop="@+id/imageViewPlay"
        android:layout_toEndOf="@+id/imageViewPlay"
        android:layout_toRightOf="@+id/imageViewPlay"
        android:visibility="visible" />

</RelativeLayout>
