<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.adarshhasija.flows.EditAudioActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/saving"
        android:id="@+id/textViewSaving"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="25dp"
        android:id="@+id/progressBarSave"
        android:layout_below="@id/textViewSaving"
        android:layout_centerVertical="true" />

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chronometerRecord"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/progressBarSave"
        android:textSize="30dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewMic"
        android:layout_below="@+id/chronometerRecord"
        android:layout_centerHorizontal="true"
        android:src="@drawable/mic_button_large" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewStop"
        android:layout_below="@id/imageViewMic"
        android:layout_centerHorizontal="true"
        android:src="@drawable/stop_button_large" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewPlay"
        android:layout_below="@+id/textViewInstruction"
        android:layout_centerHorizontal="true"
        android:src="@drawable/play_button_large" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_below="@+id/imageViewPlay"
        android:layout_centerHorizontal="true" />

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chronometerElapsedTime"
        android:layout_below="@+id/progressBar"
        android:layout_alignLeft="@+id/progressBar"
        android:layout_alignStart="@+id/progressBar" />

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chronometerTotalTime"
        android:layout_below="@+id/progressBar"
        android:layout_alignRight="@+id/progressBar"
        android:layout_alignEnd="@+id/progressBar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/record_limit"
        android:id="@+id/textViewInstruction"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imageViewMic"
        android:layout_alignRight="@+id/progressBar"
        android:layout_alignEnd="@+id/progressBar"
        android:layout_alignLeft="@+id/progressBar"
        android:layout_alignStart="@+id/progressBar"
        android:gravity="center" />


    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/buttonSaveAudio"
        android:layout_below="@+id/chronometerElapsedTime"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#ff1316ff"
        android:textColor="#ffffffff"
        android:visibility="visible" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/reset_default_audio"
        android:id="@+id/buttonResetDefault"
        android:layout_below="@+id/buttonSaveAudio"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#ffff1c26"
        android:textColor="#ffffffff"
        android:visibility="visible" />


</RelativeLayout>
